fixed sub-menu links

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,21 +21,21 @@
 			<a href="#httpRequestSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle" style="padding-left:5%; font-size:100%;">HTTP Request</a>
 			<ul class="collapse list-unstyled" id="httpRequestSubmenu">
 				<li>
-					<a href="#">dataset location</a>
+					<a href="#dataset_location">dataset location</a>
 				</li>
 				<li>
-					<a href="#">get function</a>
+					<a href="#get_function">get function</a>
 				</li>
 				<li>
-					<a href="#">geography filters</a>
+					<a href="#geography_filters">geography filters</a>
 				</li>
 				<li>
-					<a href="#">API key</a>
+					<a href="#API_key">API key</a>
 				</li>
 			</ul>
 		</li>
 		<li>
-			<a href="#"><h5>Python Census API Wraper</h5></a>
+			<a href="#Python_Census_API_Wrapper"><h5>Python Census API Wraper</h5></a>
 		</li>
 		<li>
 			<a href="#What_Next?" class="nav-link"><h4>What Next?</h4></a>
