--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -173,6 +173,11 @@ html, body {
   margin-bottom: -20px;
 }
 
+.sub-section {
+  padding-top: 40px;
+  margin-bottom: -40px;
+}
+
 @media screen and (max-width: 900px) {
   .page, .page-content, .page-title, .home-content {
     margin: 1%;
