fixed media query and social link formatting

--- a/_layouts/best-practices.html
+++ b/_layouts/best-practices.html
@@ -4,9 +4,9 @@ layout: default
 
 <div class="background">
 	<div class="parallax"></div>
-	<div class="caption">
+	<!-- <div class="caption">
 		<span>Population density coropleth of Tennessee made with data from the Census API.</span>
-	</div>
+	</div> -->
 </div>
 <div class="bar1"></div>
 <div class="home wrapper">
