--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,18 +19,18 @@
         <h4 id="social" style="margin-top: 28px; margin-left: 4px;">social</h4>
         <div class="social social-r1">
           <a class="btn btn-social-icon btn-envelope-o" href="mailto:censusdocs@gmail.com">
-            <span class="fa fa-envelope-o" style="color: #efefef;" aria-hidden="true">Link to email</span>
+            <span class="fa fa-envelope-o" style="color: #efefef;" aria-hidden="true"></span>
           </a>
           <a class="btn btn-social-icon btn-github-o" href="https://www.github.com/shepnathand">
-            <span class="fa fa-github"  style="color: #efefef;" aria-hidden="true">Link to GitHub</span>
+            <span class="fa fa-github"  style="color: #efefef;" aria-hidden="true"></span>
           </a>
         </div>
         <div class="social social-r2">
           <a class="btn btn-social-icon btn-linkedin-o" href="https://www.linkedin.com/in/shepnathand/">
-            <span class="fa fa-linkedin" style="color: #efefef;" aria-hidden="true">Link to LinkedIn</span>
+            <span class="fa fa-linkedin" style="color: #efefef;" aria-hidden="true"></span>
           </a>
           <a class="btn btn-social-icon btn-twitter-o" href="https://twitter.com/CensusDocs">
-            <span class="fa fa-twitter" style="color: #efefef;" aria-hidden="true">Link to Twitter</span>
+            <span class="fa fa-twitter" style="color: #efefef;" aria-hidden="true"></span>
           </a>
         </div>
         </div>
